--- a/css/layout.css
+++ b/css/layout.css
@@ -433,7 +433,7 @@
 	padding: 25px;
 	text-align: center;
 	border-radius: 16px;
-	margin-bottom: 20px;
+	margin: 10px 0 20px;
 }
 
 .deleted_feed p {
