--- a/css/content.css
+++ b/css/content.css
@@ -1188,6 +1188,7 @@
 
 .acitive_wrap {
 	height: 100%;
+	min-height: calc(100vh - 220px);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
