--- a/css/content.css
+++ b/css/content.css
@@ -828,7 +828,7 @@
 
 .mile_scroll {
 	overflow-y: auto;
-	height: calc(100vh - 330px);
+	height: calc(100dvh - 330px);
 }
 
 .mileage_chang {
@@ -1188,7 +1188,7 @@
 
 .acitive_wrap {
 	height: 100%;
-	min-height: calc(100vh - 200px);
+	min-height: calc(100dvh - 200px);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
