--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	min-height: 100vh;
+	min-height: 100dvh;
 	background-color: #f7f7f7;
 }
 
@@ -12,7 +12,7 @@
 	position: relative;
 	max-width: 480px;
 	margin: 0 auto;
-	min-height: 100vh;
+	min-height: 100dvh;
 	background-color: #fff;
 }
 
@@ -545,7 +545,7 @@
 /* login */
 .login__wrap {
 	position: relative;
-	height: 100vh;
+	height: 100dvh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -744,7 +744,7 @@
 	bottom: 0;
 	width: 100%;
 	max-width: 480px;
-	height: calc(100vh - 60px);
+	height: calc(100dvh - 60px);
 	background-color: #fff;
 	border-top: 1px solid #ccc;
 	border-radius: 8px 8px 0 0;
@@ -755,12 +755,12 @@
 .up_modal.type2 {
 	border-radius: 0;
 	height: 100%;
-	min-height: 100vh;
+	min-height: 100dvh;
 }
 
 .modal_search {
 	width: 100%;
-	height: 100vh;
+	height: 100dvh;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -880,7 +880,7 @@
 
 .modal_mileage {
 	width: 100%;
-	height: 100vh;
+	height: 100dvh;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
